d-aks-defender/kubernetes_policy/limit-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: limit-volumes
  namespace: policy-demo
spec:
  automountServiceAccountToken: false
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
      - name: hostpath
        mountPath: /tmp
  volumes:
    - name: hostpath
      hostPath:
        path: /proc
