d-aks-defender/kubernetes_policy/no-api-credentials.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-api-credentials
  namespace: policy-demo
spec:
  automountServiceAccountToken: true
  containers:
  - name: nginx
    image: nginx
