d-aks-defender/kubernetes_policy/no-priv-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-priv-containers
  namespace: policy-demo
spec:
  automountServiceAccountToken: false
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
