d-aks-defender/kubernetes_policy/no-priv-escalation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-priv-escalation
  namespace: policy-demo
spec:
  automountServiceAccountToken: false
  containers:
  - name: nginx
    image: nginx
    securityContext:
      allowPrivilegeEscalation: true
