d-aks-defender/kubernetes_policy/no-sysadmin-cap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-sysadmin-cap
  namespace: policy-demo
spec:
  automountServiceAccountToken: false
  containers:
  - name: nginx
    image: nginx
    securityContext:
      capabilities:
        add: ["SYS_ADMIN"]
