d-aks-defender/kubernetes_policy/no-sysctl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-sysctl
  namespace: policy-demo
spec:
  automountServiceAccountToken: false
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "0"
  containers:
  - name: nginx
    image: nginx
