d-aks-defender/kubernetes_policy/no-external-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: no-external-lb
  namespace: policy-demo
spec:
  type: LoadBalancer
  selector:
    app: no-external-lb
  ports:
  - port: 80
    targetPort: 80
