d-aks-defender/kubernetes_policy/https-ingress-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress-only
  namespace: policy-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: someservice
            port: 
              number: 80
